build_error.log
SwiftCompile normal arm64 /Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift (in target 'DanielApp' from project 'DanielApp')
    cd /Users/yinshi/Documents/DanielApp_new
    
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:17:30: error: value of type 'WordCardViewModel' has no dynamic member 'cards' using key path from root type 'WordCardViewModel'
            return viewModel.cards
                   ~~~~~~~~~ ^~~~~
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:17:20: error: referencing subscript 'subscript(dynamicMember:)' requires wrapper 'ObservedObject<WordCardViewModel>.Wrapper'
            return viewModel.cards
                   ^
                   $
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:17:30: error: cannot convert return expression of type 'Binding<Subject>' to return type '[WordCard]'
            return viewModel.cards
                   ~~~~~~~~~~^~~~~
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:19:60: error: binary operator '==' cannot be applied to operands of type 'Binding<_>' and 'LocalizedText.WordCardGallery'
            return viewModel.cards.filter { $0.categoryKey == selectedCategoryKey }
                                            ~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:19:36: error: cannot convert return expression of type '[Binding<Subject>.Element]' (aka 'Array<Binding<Subject.Element>>') to return type '[WordCard]'
            return viewModel.cards.filter { $0.categoryKey == selectedCategoryKey }
                                   ^
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:19:36: note: arguments to generic parameter 'Element' ('Binding<Subject>.Element' (aka 'Binding<Subject.Element>') and 'WordCard') are expected to be equal
            return viewModel.cards.filter { $0.categoryKey == selectedCategoryKey }
                                   ^
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:19:30: error: value of type 'WordCardViewModel' has no dynamic member 'cards' using key path from root type 'WordCardViewModel'
            return viewModel.cards.filter { $0.categoryKey == selectedCategoryKey }
                   ~~~~~~~~~ ^~~~~
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:19:20: error: referencing subscript 'subscript(dynamicMember:)' requires wrapper 'ObservedObject<WordCardViewModel>.Wrapper'
            return viewModel.cards.filter { $0.categoryKey == selectedCategoryKey }
                   ^
                   $
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:160:25: error: the compiler is unable to type-check this expression in reasonable time; try breaking up the expression into distinct sub-expressions
    var body: some View {
                        ^
/Users/yinshi/Documents/DanielApp_new/DanielApp/WordCardGalleryView.swift:412:35: error: value of type 'CardCaption' has no member 'text'
                Text(card.caption.text(for: language))
                     ~~~~~~~~~~~~ ^~~~

